--- a/styles/style.css
+++ b/styles/style.css
@@ -3,3 +3,25 @@ img {
     margin-left: auto;
     margin-right: auto;
 }
+
+.top-left {
+    display:inline;
+    position:static; 
+    left:2px; 
+    top:5px;
+    font-family: Arial;
+    padding-right: 5px;
+}
+
+.top-right {
+    display:inline;
+    position:Fixed; 
+    right:2px; 
+    top:5px;
+    padding-left: 5px;
+}
+
+a {
+    text-decoration: none;
+    color: black;
+}
